--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: William Parkin   
+email: willparkin1@gmail.com
+url: 
+description: "Hello! My name is Will, I am a Programmer and Games Design Generalist.
+                I love creating Systems, Tools, Shaders and helping a whole project come together!"
+keywords: "Game Developer, Games, Portfolio, Programming, Tools, Shaders, Generalist"
+skills: "Programming - Tools - Shaders - Generalist"
+meta_author: Parkin William
 
 # Google webmaster tools
 google_verify:
